--- a/shared/business/starting/ビジネスを始める.md
+++ b/shared/business/starting/ビジネスを始める.md
@@ -53,3 +53,19 @@ https://youtube.com/watch?v=lEixj4MSNAo&si=LHL_AcQ90Wnk9lpn
 - どのようなスキルを持っているか
 - どのようなスキルを身につけられるか
 - 持っているスキルを活かせないか
+
+ビジネスはまず顧客を考えないといけない。
+
+どんな顧客が考えられるか。
+
+戦略分析:
+
+- サブクエスチョンの立案
+- 競合マッピング
+- 市場調査
+- 差別化ポイントの探索
+- 収益構造
+- ブランドリスクの指摘
+- 戦略オプション設計
+- 長期ロードマップ
+- Go条件
