--- a/shared/game/competitive/対戦ゲーム.md
+++ b/shared/game/competitive/対戦ゲーム.md
@@ -1,4 +1,6 @@
-対戦ゲーム。非協力ゲーム。
+## Competitive Game
+
+対戦ゲーム。非協力ゲーム。競技。
 
 各プレイヤーが独立して自身の利得を最大化しようとする。
 
@@ -10,3 +12,5 @@
 裏切りや報復が起こる。
 
 対戦ゲームは勝負。勝ち負けの世界。
+
+競技は特に、技術の優劣を争う。
