--- a/shared/society/人間関係.md
+++ b/shared/society/人間関係.md
@@ -91,3 +91,5 @@ Personal vs Social
 
 人間関係は、自分にとって要らない人を切る面もあるので、人間関係を続けるための最適解が最適とは限らない。
 たとえば共通点よりも相違点こそが価値だと考える人は、共通点の話ばかりする人と付き合っても仕方ないので、相違点の話をすることで関係を切っていくのが最適になる。
+
+自分が性格よくいられる人と付き合うのは大事。
