--- a/shared/sex/tips/セックスフレンド.md
+++ b/shared/sex/tips/セックスフレンド.md
@@ -1,3 +1,6 @@
 セフレは恋人を目指さない関係かな。恋愛ではない。セックス自体が目的の関係。一方だけが恋愛だと思っていると刺されるので、お互いに合意するべきではある。
 
 口では「付き合っている」と言っていても、最終的に子供を作ったり結婚したりする相手だと思われてないならセフレみたいなもん。
+
+付き合う前にセックスすると恋人というよりも都合のいいセフレとして扱われがち。
+男性的には、恋人からセフレになることはあっても、セフレから恋人になることはあまりない。
