--- a/shared/memory/frameworks/分散学習.md
+++ b/shared/memory/frameworks/分散学習.md
@@ -1,3 +1,7 @@
 # Spaced Repetition
 
 エビングハウスの忘却曲線に基づいて、忘れかけたタイミングで思い出すことで記憶を定着させる方法。
+
+新しく知ったことは記憶システムにメモしておいて、あとからリマインドして復習すると定着する。
+
+AnkiやreminDOのようなアプリもある。
