--- a/shared/perception/認識.md
+++ b/shared/perception/認識.md
@@ -39,3 +39,6 @@
 認識できなくても「ない」とは言えない。
 その場では認識できなくても、後々に影響を受けることがある。ウイルスや細菌で病気になるとか。
 影響というものは心ではなく体で受けるものだ。
+
+語彙が少ないと、分類が少なくなる。認識が大味になる。
+たとえば「最高」と「最悪」しか知らないと、なんでもどちらかに当てはめようとしてしまう。
