--- a/shared/popular/人を集める.md
+++ b/shared/popular/人を集める.md
@@ -45,3 +45,5 @@
 不用意に目立つのがよくないだけで、信頼できる限られた人に興味を持ってもらうのは良いことだ。
 
 「人が集まる」のが大事で、必ずしも人に好かれるとは限らない。
+
+新規顧客の獲得は雑でいい。だめならだめでいいし。既存顧客の扱いはもっと慎重にやらないといけない。
