--- a/shared/human/body/muscle/training/exercises/スクワット.md
+++ b/shared/human/body/muscle/training/exercises/スクワット.md
@@ -23,6 +23,7 @@
 ## 派生
 
 - ゆっくり腰を下ろす
+- 腕を回しながらスクワット
 - スクワット
 - スクワットホールド
 - ドクターズスクワット
@@ -32,3 +33,6 @@
 膝を完全に曲げ切ってしゃがんだり立ったりするだけでもいい。なんなら最初は負荷が低いので始めやすい。
 
 スクワットもきつかったらまずはゆっくり腰を下ろすだけにする。
+
+腕を回しながらスクワットすることで肩や背中も鍛えられる。
+https://x.com/bijo_no_resipi/status/2020082694768730480?s=12
