--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -375,9 +375,10 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 
 相手に「やり返してもいい」と思ってもらうための方策:
 
+- 苦しい時こそ笑う
 - 自分から先に自虐ネタを言う
   - 失敗談を滑稽話にする（自分の過去を笑う）
-  - 弱みを見せる
+  - 自分の弱みを笑う
 - ツッコミを褒める、笑う
 - 「かかってこい」と直接伝える
 - 軽いネタで相手が言い返してくるのを探る
@@ -411,3 +412,14 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 物事の意外なつながり、曖昧なもの、が大事。
 
 おかしさというのは、ある種の理不尽でもある。
+
+「一緒に笑える」のがユーモアの基本。
+
+常に「どうやって笑いに変えるか」を考える。
+なんでもないこと、嫌なことを捉え直す。
+
+人に話さないならブラックユーモアでもいい。
+
+「不謹慎」を他人に投げる人はユーモアをなくそうとしている。
+むしろ本当に極限の現場では不謹慎だろうとなんだろうと笑えるようにしないといけない。
+そもそも「不謹慎」みたいなことを言う人は遠くから文句を言うだけの人だ。
