--- a/shared/learning/学習の流れ.md
+++ b/shared/learning/学習の流れ.md
@@ -9,3 +9,8 @@
 
 仮説を立てて、検証して、また仮説を立てる、の繰り返しが学びにつながる。
 これを満足するまで繰り返す。
+
+何かを学ぶとき、自分で失敗したか判別できるところだけ一人で学んで練習する。
+そのためにスキルを分解して、分別しないといけない。学ぶ順序と範囲を決める。
+失敗したか判別できないことはメンターやトレーナーが必要。
+特に最初の20時間で「下手」な時期を一気に抜ける。
