--- a/shared/love/人を選ぶ.md
+++ b/shared/love/人を選ぶ.md
@@ -14,3 +14,13 @@
 まずはとにかく知人を増やそう。
 
 ただ気持ちよく付き合えるだけが良いわけではない。
+
+良くない態度:
+
+- 店員への態度が悪い
+- くちゃくちゃと口を開けて噛む
+- 爪を噛む
+- ケチ
+- 自慢話
+- 人前でスマホをずっと見ている
+- セクハラ
