--- a/shared/story/telling/物語の描写.md
+++ b/shared/story/telling/物語の描写.md
@@ -7,3 +7,5 @@
 描写するべきなのは外から見た振る舞い。嬉しいとかの感情であったり、利害関係の思惑であったり、そういったものはいちいち書かない。
 
 体験の描写は文章であってもカメラワークに気をつける。あまりカメラがうろちょろするのは好ましくない。
+
+光景に入り込んでいる描写は面白い。単なる俯瞰の説明よりも。
