--- a/shared/people/appearance/outfit/tips/装いの予算配分.md
+++ b/shared/people/appearance/outfit/tips/装いの予算配分.md
@@ -14,15 +14,19 @@
 
 - 鞄 (2万円〜): 劣化しにくい、目立つ
 - 靴 (1万円〜): 劣化しにくい、目立つ
+- 髪: 目立つ、美容室で切る
 
 ## Tier A
 
 - ストール・マフラー: 劣化しにくい、小顔効果がある
 - アクセサリー（特に首と手首）: 安っぽいとダサい、そこまで高くない
+- 歯列矯正
+- 香水: 高いから良いわけではない
 
 ## Tier B
 
 - アウター
+- 眉: 自分でできる
 
 ## Tier C
 
