--- a/shared/trust/intimacy/tips/共通点を探る.md
+++ b/shared/trust/intimacy/tips/共通点を探る.md
@@ -16,6 +16,8 @@
   - 体格
   - 筋肉
 - 誕生日
+  - 誕生月
+  - 誕生した季節
 - 使っているもの（化粧品とか）
 - 習慣
 - 信仰
@@ -70,3 +72,5 @@
 
 共通点を合わせるには選択肢を絞る手もある。
 「これとこれならどっち？」で、違ったらそれはそれで盛り上がる。
+
+ほんのちょっとの共通点でもいい。なんなら、自分から無理やり「これ一緒だね」って強調するだけでいい。
