--- a/shared/lifestyle/fragrance/tips/香水をつける.md
+++ b/shared/lifestyle/fragrance/tips/香水をつける.md
@@ -1,12 +1,17 @@
-香水は首から肩と手の甲にスプレーする。
-手を動かしている間に自分の方に香りが向かう。
+## ポイント
+
+- 首周りと手の甲にスプレーする
+- 香水をつけたところを擦らない
+- 柔軟剤などの下地の匂いは無臭にする
+
+手の甲につけると、手を動かしている間に自分の方に香りが向かう。
 
 香水をつけたところを擦ると熱で香りが落ちるので触らない。
 
 ルイ・ヴィトンの調香師が教える香水の付け方の日本語訳
 https://x.com/esssssuuuuu/status/1692388991264587946?s=20
 
-香水をつけるときは、柔軟剤などの下地の匂いは無臭にする。
+手首に乗せたりするのはスプレーがなかった時代。
 
 香水は50mlで一年くらい使える。だいたい月に4mlが目安。
 
