--- a/shared/trust/intimacy/親近感.md
+++ b/shared/trust/intimacy/親近感.md
@@ -32,3 +32,19 @@
 親しくなるだけじゃなくて、気を遣わなくていいのが友人。
 
 親近感があるということは、恩恵を得る機会が多いということ。
+
+親しいということは、より深く理解しているということでもある。
+
+- お互いの内面を少しずつ開示すること
+  - 本音
+  - 悩みや弱み
+  - 夢や不安
+- 相手のことをより深く知ろうとすること
+- 長い時間を共にすること
+- 癖や傾向を知ること
+- 相手を批判せずに受け入れること
+
+癖やバグがあっても回避して使えれば信頼できる。
+相手の欠点や苦手なことを知って調整するのは、批判や諦めではなく、相手を理解した柔軟な対応。
+
+キーボードから目を離してもタイピングできたり、ショートカットキーを体が覚えたり、言葉にしなくても通じ合えたりすると信頼できている。
