--- a/shared/trust/信頼の要素.md
+++ b/shared/trust/信頼の要素.md
@@ -11,3 +11,8 @@
 使う機会が少なければ押入れの奥にしまっても（利便性が低くなっても）いい、とか。
 
 身近な人の言ったことは信じるとか、奇跡を信じるとか、信頼できないものを信頼すると失敗する。
+
+親近感は、「癖を理解する」面もある。癖を理解することで、使い勝手が悪いというか、ピーキーなものでもうまく扱えるようになる。より信頼できる。
+
+親近感を利便性というとちょっと違うかも。
+ピーキーな性能を理解して、適材適所に当てはめる。
