--- a/shared/care/友人.md
+++ b/shared/care/友人.md
@@ -1,5 +1,7 @@
 # 友人
 
+お互いに気を遣わない関係。
+
 まず友人とは何か。
 
 お互いに好意を持った知人。
@@ -263,3 +265,20 @@
 「親友、ですか」
 「親友さぁ。互いが互いのことを気を遣わずに、自由に議論を交わすことができるのだろう？　それを親友と言わずして、何というのだい？」
 『結界師への転生』
+
+義務や必要性とは別に、会いたいから会う。
+
+共有する何かがあると親しくなりやすい。
+
+相互的な関心。これは機械相手ではない感覚。
+
+努力を要さない共存。
+
+普段からお互いに面倒を見なくていいからこそ、いざという時の助けに義務感や負債感が生まれにくい。
+「いつも世話になっているから返さなきゃ」とは思わない。義理じゃないもので動いている。
+
+気を使わなくても関係が壊れない、という安心感がある。
+
+何度も意見が対立したり、批判しあったり、不満を明かしたり、からかったり、といったことがあっても関係が続いたという実績の積み重ねが必要。
+
+リラックスよりもスリルを共有する。
