--- a/shared/people/性格.md
+++ b/shared/people/性格.md
@@ -32,3 +32,15 @@
 - サディズム: 他人に苦痛を与えたがる
 
 鈍感、自己本位、他人の不幸を喜ぶ。共感性の欠如。
+
+いい人の典型:
+
+- 相手の自己肯定感、自尊心を高める
+  - 弱さを見せる
+  - 役割を与える
+- 笑わせるのではなく、一緒に笑い合う
+- パートナーの成功を自分のことのように祝う
+- 議論に勝つより意見を聞く
+- 感謝されることをする
+
+いい人というのは、信頼していい人。安心できて、恩恵がある人。
