--- a/shared/sex/dating/tips/デートに誘う.md
+++ b/shared/sex/dating/tips/デートに誘う.md
@@ -6,3 +6,14 @@
 ゆるゆる動いていると関係が切れやすい。
 
 ガツガツ行って、でも結果的に何も得られないやり方はするな。これに尽きる。
+
+最初のデートは落ち着いて美味しい食事と会話ができるところにするべき。特に甘いもの。
+
+- 一緒に甘いものを食べる
+- スリルを共有する
+  - アイススケート
+  - など
+
+https://youtu.be/gD7_pbaQyIs?si=OuPTnwpQB-FSjkxj
+
+親しい人とまだ親しくない人とではデートコースを変える。
