--- a/shared/dance/tips/ダンスを評価する.md
+++ b/shared/dance/tips/ダンスを評価する.md
@@ -7,6 +7,29 @@
 - 協調性: ユニゾンの完成度、全体の統一感、チームワーク
 - 教育的側面: 選曲や振り付けにおけるコンプライアンス、マナー
 
+## 例: フィギュアスケートの演技構成点
+
+- 表現（プレゼンテーション）
+  - 表現と投射
+  - エネルギーや動きの多様さ、メリハリ
+  - 音楽に対する感受性、タイミング
+  - 一体感、空間把握（ペア、アイスダンス、シンクロナイズドスケーティング）
+- 構成（コンポジション）
+  - 多次元な動きと空間の利用
+  - 要素中および要素間のつなぎ・つながり
+  - 音楽のフレーズや表現形式を反映した振り付け
+  - パターンと氷面の十分な利用
+  - 統一感
+- 技術（スケーティングスキル）
+  - 多彩なエッジ、ステップ、ターン、動き、方向
+  - エッジ、ステップ、ターン、動き、身体コントロールの精度
+  - バランスとなめらかな滑り
+  - 流れ
+  - パワーとスピード
+  - ユニゾン（ペア、アイスダンス、シンクロナイズドスケーティング）
+
+https://www.jsports.co.jp/skate/about/game/
+
 ## その他
 
 ショーは各個にひとつずつ見せていって、
