--- a/shared/communication/frameworks/emotion/感情表現.md
+++ b/shared/communication/frameworks/emotion/感情表現.md
@@ -93,3 +93,20 @@ negative
 感情と違って、感情表現は用いるものだ。振り回されてはいけない。
 
 感情の基本は快か、不快か。
+
+- 表情
+- ジェスチャー
+  - 全身
+  - 姿勢
+    - 前のめり
+  - 手や腕の動き
+  - 首や肩の動き
+
+「感情には重力がある。緊張したり落ち込むと体が丸くなる。」『メダリスト』
+
+- 怒り
+  - 荒々しい
+    - 体を大きく見せる
+      - 体を開く
+      - 捻りを入れて体を大きく動かす
+  - 息が荒い
