--- a/shared/development/卓越性.md
+++ b/shared/development/卓越性.md
@@ -38,3 +38,5 @@
 プロはまず基礎ができている上に、人間離れした武器を一つは持っている。歌手なら音楽的なリズムやメロディの完成度に加えて、声質、声色、声量、音域、など。
 
 基礎になる技術は後からついてくるけど、人間離れした武器になりうるものはそれよりも前から片鱗が見える。
+
+技術を身につけるだけでなく、卓越する。世界一になる。
