--- a/shared/trust/intimacy/誰かと親しくなる.md
+++ b/shared/trust/intimacy/誰かと親しくなる.md
@@ -297,3 +297,5 @@ https://www.total-marriage.com/column/1644/
 友人を目指して親しくなるのか、恋人を目指して親しくなるのか、はっきりと決めて近づき方を変える。
 
 スモールトークからディープトークに移行するのが上手いと有利。
+
+深い話題を話すのが大事なら、飲み会の場はむしろ良くないのかも。飲み会の行き帰りの道とか、ちょっと離れたところで二人で話すチャンスを作るのが大事。連絡先を交換して、すぐ連絡するのも大事かも。
