--- a/shared/care/友人.md
+++ b/shared/care/友人.md
@@ -284,3 +284,12 @@
 リラックスよりもスリルを共有する。
 
 仲直りしないといけないのは友人を続けたい人だけ。
+
+友人になるには、どんなことがあっても「関係が続いた」実績が必要。
+ある程度、関係が壊れるような出来事が必要。
+
+友人になるには、普通なら他人が離れていくような深い話をする。もちろん合わないこともある。
+
+そもそも初めから誰にも気を遣わない人って友人いらないのでは？
+
+友人がたくさんいると、急に誘ってもスケジュールが合いやすい。
