--- a/shared/collaboration/協力.md
+++ b/shared/collaboration/協力.md
@@ -35,3 +35,31 @@ collaborationはengagementと関わる部分が大きい。
 敵の敵でも味方にはなるとは限らないけど、客や餌にはなる。利用できる。
 
 societyとまとめてもいいっちゃいい。
+
+4つのコラボレーションモデル:
+
+1. 階層的コラボレーション（Hierarchical Collaboration）
+
+デザイナーが完全に主導権を握る
+AIは主に分析とインスピレーションの統合に使用
+デザイナーがすべての意思決定をコントロール
+
+2. 集中的コラボレーション（Focused Collaboration）
+
+AIが創造的表現の触媒として機能
+デザイナーの入力に基づいて革新的なアイデアと視覚化を生成
+初期段階と最終段階でデザイナーが戦略的にコントロール
+
+3. ランダムコラボレーション（Random Collaboration）
+
+AIとデザイナーの役割が不明確
+断片的な入力とフィードバック
+一貫性のない結果とあいまいなデザイン
+デザイナーがAIの結果を無批判に受け入れる傾向
+
+4. 相互コラボレーション（Mutual Collaboration）【理想モデル】
+
+デザインプロセス全体を通じてAIがシームレスにサポート
+継続的な相互調整と学習
+デザイナーとAIの強みを最大限に活用
+バランスの取れた協力関係
