--- a/shared/design/visual/視覚的なデザイン.md
+++ b/shared/design/visual/視覚的なデザイン.md
@@ -25,3 +25,12 @@ https://twitter.com/n_seitan/status/1649728816812793856
 
 色数が少ないと単調に見える。
 色数が少ないと落ち着いてみえる。
+
+服飾のデザインプロセスの例:
+
+1. インスピレーション＆コンセプト化 - コンセプト定義
+2. リサーチ、ムードボード＆カラーパレット - ビジュアル翻訳
+3. デザイン開発 - スケッチとフラットドローイング
+4. 生地＆素材選択 - 技術的仕様の詳細化
+5. デジタルパターン作成＆バーチャルプロトタイピング - CLO3Dソフトウェアでの3D検証
+6. バーチャルファッションショーのクリエイティブディレクション - ランウェイ設定の提案
