--- a/shared/engagement/パートナー.md
+++ b/shared/engagement/パートナー.md
@@ -51,3 +51,5 @@
 パートナーは苦労も共有する。
 
 パートナーは助け合うもので、一方が助けるだけならもう一方は要らない。パートナーはあくまでも利害関係の一つで、相互に利がないと続ける意味がない。特に恋人の場合、一方が子育ての役に立たないなら切るべき。
+
+相手の幸せを一緒に祝う。自分ごとのように祝う。
