--- a/shared/execution/delegation/tips/人に仕事を頼む.md
+++ b/shared/execution/delegation/tips/人に仕事を頼む.md
@@ -1,6 +1,13 @@
 ## 機械に仕事を任せるのとは違うところ
 
 - 相手にも感情や面子がある
+  - 不安を抑える
+    - 相手のキャリアパスも考慮する
+  - 不満を抑える
+    - 意義を伝える
+    - 正当に評価する
+- 疲労やストレスがパフォーマンスに影響する
+  - その時の状態を見極める
 
 ## その他
 
@@ -14,3 +21,7 @@ https://x.com/ysk_motoyama/status/1814496851703615906
 5. 「なぜ他ではなくあなたにお願いするのか」を書く
 6. 相手の進捗を把握し、期限まで残り30%のタイミングでリマインドする
 7. お礼と成果をきちんと伝える
+
+仕事の意義を伝え、成長や成功を実感できるようにする。
+
+誰かに任せることで、任せられなかったメンバーとの関係性が変わることもあるので注意。
