--- a/shared/execution/delegation/委譲.md
+++ b/shared/execution/delegation/委譲.md
@@ -166,3 +166,5 @@ AIや素人を使うのが苦手なのは、品質を担保するのが苦手な
 逆に、委譲先をまとめてチームにして、より大きな処理を投げられるようにすることもできる。
 
 失敗から学ばせる前に適切な教育とモニタリングが必要。
+
+対話的に進めた方が、細かいフィードバックができて思った通りの出力になりやすい。
