--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -423,3 +423,5 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 「不謹慎」を他人に投げる人はユーモアをなくそうとしている。
 むしろ本当に極限の現場では不謹慎だろうとなんだろうと笑えるようにしないといけない。
 そもそも「不謹慎」みたいなことを言う人は遠くから文句を言うだけの人だ。
+
+「笑わせる」よりも「一緒に笑う」。
