--- a/shared/people/appearance/身なりの優先順位.md
+++ b/shared/people/appearance/身なりの優先順位.md
@@ -7,9 +7,12 @@
 2. サイズ感
    1. 顔を小さく見せる
    2. 脚を長く見せる
-3. 色
-4. 形（シルエット）
-5. パーソナリティ
+3. 系統
+   1. フォーマル・カジュアル
+4. 色
+   1. モノトーン
+5. 形（シルエット）
+6. 個性
 
 まずは客観的な清潔感を土台として、主観的なこだわりを積み上げるもの。
 
@@ -20,3 +23,5 @@
 そうでないなら、まず顔を小さく、脚を長く見せる工夫が必要。
 
 「筋トレしてユニクロ着とけ」
+
+系統を考えないとバランスが悪い。
