--- a/shared/talk/topics/深い話題.md
+++ b/shared/talk/topics/深い話題.md
@@ -5,6 +5,8 @@
 - 二人きりで話す
 - 相手の考え方や感じ方を引き出す
 - 相手に楽しく話してもらう
+- リスクが高い
+  - 価値観が合わないこともある
 
 ## 具体例
 
@@ -53,3 +55,8 @@ https://youtu.be/wNT0Oc63T8w?si=IXzFKBhpCgV63Spu
 
 深い話題はリスクが高い話題でもある。
 ただ、どっちみち親しくなれないなら近いうちに飽きて離れていく。
+
+軽い話題で少し話してからであれば、多少リスクが抑えられる。
+
+相手に嫌われたくなくて深い話をしないのは間違っている。
+どっちにしても深い話をしないと嫌われる。
