--- a/shared/business/starting/ビジネスを始める.md
+++ b/shared/business/starting/ビジネスを始める.md
@@ -69,3 +69,17 @@ https://youtube.com/watch?v=lEixj4MSNAo&si=LHL_AcQ90Wnk9lpn
 - 戦略オプション設計
 - 長期ロードマップ
 - Go条件
+
+事業を始めるのにどんなことを考えるべきか。
+
+- コスト
+- リスク
+- どのくらいの潜在顧客がいるか
+- どのくらいの潜在顧客に接触できるか
+- どのくらいの顧客を持てばいいか
+- 価格はいくらにするか
+- いくらまで出せるか
+- 価格はどうやって回収するか
+- どういう単位の契約にするか
+- どうやって支払うか
+- どうやって既存顧客を維持するか
