--- a/shared/execution/delegation/委譲.md
+++ b/shared/execution/delegation/委譲.md
@@ -168,3 +168,11 @@ AIや素人を使うのが苦手なのは、品質を担保するのが苦手な
 失敗から学ばせる前に適切な教育とモニタリングが必要。
 
 対話的に進めた方が、細かいフィードバックができて思った通りの出力になりやすい。
+
+できるだけ詳細に、とか、ミドルの、シニアの教科書を作るつもりで、とか決めて、まず構成や目次を出力する。全体から部分に、対話的に進める。
+
+相手の頭の中に実行計画ができてないといけない。
+プログラミングと同じ。
+
+委譲はできれば対話的に進めるのが大事。
+一度委譲したら任せてもいいけど、安定するまではデバッグしながらでないといけない。
