--- a/shared/execution/delegation/委譲.md
+++ b/shared/execution/delegation/委譲.md
@@ -176,3 +176,8 @@ AIや素人を使うのが苦手なのは、品質を担保するのが苦手な
 
 委譲はできれば対話的に進めるのが大事。
 一度委譲したら任せてもいいけど、安定するまではデバッグしながらでないといけない。
+
+デバッグはコンピュータと対話してフィードバックするのと変わらない。
+というか、委譲の大部分はプログラミング。人間の場合は感情や面子の問題もあるけど、相手の頭の中に実行計画を作るのは変わらない。
+
+AIに正しく委譲できれば、人間の頭でできることはかなり広い範囲がカバーできる。
