--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -425,3 +425,7 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 そもそも「不謹慎」みたいなことを言う人は遠くから文句を言うだけの人だ。
 
 「笑わせる」よりも「一緒に笑う」。
+
+絶望的な状況の中で思考を止めないための着火剤がユーモアなのかも。
+
+絶望的な状況の中で希望を探す。
