--- a/shared/trust/intimacy/tips/弱みを見せる.md
+++ b/shared/trust/intimacy/tips/弱みを見せる.md
@@ -25,3 +25,7 @@
 弱みはユーモアや人間味。
 
 弱みがバレるよりは、弱みを見せた方がいい。
+
+弱みはバレるよりもバラした方がいい。
+そのためには、他人から突かれるような弱みに気づかないといけない。
+例えば、ホストとかキャバとか配信者として活動していて、ガチ恋がいるのに交際相手や結婚相手がいるとかは刺される。
