--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -429,3 +429,8 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 絶望的な状況の中で思考を止めないための着火剤がユーモアなのかも。
 
 絶望的な状況の中で希望を探す。
+
+そもそもメンタルが強すぎるとユーモアってあんま要らないのかも。
+
+芸人さんはプロとしてのユーモア。
+プロじゃないユーモアは必ずしも誰かを笑わせる必要がない。
