--- a/shared/joke/ボケとツッコミ.md
+++ b/shared/joke/ボケとツッコミ.md
@@ -19,3 +19,6 @@
 誰かがボケたら必ず誰かがツッコミを入れる、という文化は社会参加の証明の面もある。
 
 一発ギャグはツッコミがいるなら異常な振る舞いだけでもいいけど、一人ならフリとオチのスタイルが必要。ショートコントとか。
+
+たくろうはボケとツッコミというよりも、きむらがフリで赤木がオチ。無茶振りを赤木が落として、最終的にきむらの大オチにだけツッコミを入れる。
+きむらが話を勝手に進めるのに赤木が戸惑いながらついていくのはますだおかだと同じスタイルかも。おかだが元気すぎて仕上がりは全然違うけど。千鳥のコントっぽさもある。
