--- a/shared/trust/intimacy/tips/共通点を探る.md
+++ b/shared/trust/intimacy/tips/共通点を探る.md
@@ -74,3 +74,7 @@
 「これとこれならどっち？」で、違ったらそれはそれで盛り上がる。
 
 ほんのちょっとの共通点でもいい。なんなら、自分から無理やり「これ一緒だね」って強調するだけでいい。
+
+抽象的なことが好きだと友達が減るのはわかりすぎる。
+「人を情報量で見ている」
+https://youtube.com/watch?v=LrXHcmdv6hQ&si=eCSqQQ6CvMQ8izds
