--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -434,3 +434,9 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 
 芸人さんはプロとしてのユーモア。
 プロじゃないユーモアは必ずしも誰かを笑わせる必要がない。
+
+何かが「つまらない」と思うのはスキルかユーモアがないから。
+ただ、スキルがあったら別にユーモアがなくても楽しめることが多い。
+そもそも絶望的な状況になりにくい。
+
+ユーモアに対する概念ってスキルなのかもしれない。
