--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -384,3 +384,6 @@ https://m.twitch.tv/videos/1991942489?desktop-redirect=true
 技術は意識しなくてもできるくらいまで練習が必要。手段でしかない。最初は使う技術を絞るのも大事。
 
 練習には反復する回数が必要だけど、二人以上必要なことだと仲間が必要。仲間が多いほど回数も増やせる。
+
+スキルを身につけるために練習することもあるけど、練習はスキルだけの問題じゃない。
+どちらかというとパフォーマンスとか、信頼性とか。慣れ。
