--- a/shared/trust/intimacy/tips/悪意を隠す.md
+++ b/shared/trust/intimacy/tips/悪意を隠す.md
@@ -8,3 +8,18 @@
 マイナスからスタートする場合は悪意や好意の問題よりも、まず興味を持ってもらうのが大事。
 
 悪意を隠すというよりは、悪意として受け取られないようにする。特に好意を悪意として受け取られるのは困る。
+
+悪意を隠すっていうよりは、悪意がないことを示すっていうべきかも。
+
+何かを指摘したり、不満を言ったりするときは、「悪意がない」ことを示さないといけない。
+「本当に悪意がないのは信じてほしいんだけど」とか。
+
+- 相手の面子を守る
+  - 相手のネガティブなところを指摘しない
+  - 相手の対外的な面子を守る
+    - 相手のネガティブなところを指摘するなら二人きりで話す
+
+仕事や家庭ではネガティブなところを指摘しないといけないこともある。
+特にパートナーには不満を伝えあってお互いに改善しないとうまくやっていけない。
+
+ただ、悪意がないからといって許されるとは限らない。大事なのは恩恵があるかどうか。不快じゃないかどうか。
