--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -394,12 +394,15 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 あえて本気と冗談、本音と建前の境界を曖昧にしている場合もある。
 「もうちょっと連絡してくれてもいいんじゃないのー！？ぷんぷん」みたいに冗談めかしていっているけど本気とか、ただのいじめを「冗談だよ」って誤魔化すとか。
 
-ユーモアのスタイル:
+ユーモアの基本スタイル:
 
-- 親和的: 場を和ませる
-- 自己高揚的: 困難な状況でも前向きに捉える
-- 攻撃的: 他人を貶める
-- 自虐的: 自分を貶める
+- 親和的: 場を和ませる（ポジティブで外向き）
+- 自己高揚的: 困難な状況でも前向きに捉える（ポジティブで内向き）
+- 攻撃的: 他人を貶める（ネガティブで外向き）
+- 自虐的: 自分を貶める（ネガティブで内向き）
+
+その他の軸:
+
 - 防御的: 相手を否定せずに断る
 
 直接的に拒否する（否定する）よりも、肯定的に受け入れつつ条件をつける方が関係性を保ちやすいし、周囲も笑える。
