--- a/shared/care/気遣い.md
+++ b/shared/care/気遣い.md
@@ -198,3 +198,6 @@
 逃げ道を与えるのは気遣いとしては良し悪しなので慎重に。
 
 相手に気を遣わせないのが最大の気遣い。
+
+謝るとむしろ気を遣わせてしまう場面もある。
+「すみません！」と、できればその場で、さらっと謝って話題を変えるとか、謝る代わりに日頃の感謝を示すこともできる。
