--- a/shared/humor/tips/自虐.md
+++ b/shared/humor/tips/自虐.md
@@ -34,3 +34,6 @@
 自虐ネタは相手がツッコミやすいようにするもので、やりすぎると逆に周りがツッコミにくくなる。
 
 上司と部下など、低く見られない方がいい立場もある。
+
+「自分は会話が下手だと思ってて」っていうの、もしかして自虐として受け取られた？フォローされてた。
+こういう別に自虐じゃないのに自虐だと思われてる、あるいは謙遜だと思われてるのってどうなんだろ。
