--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -443,3 +443,36 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 そもそも絶望的な状況になりにくい。
 
 ユーモアに対する概念ってスキルなのかもしれない。
+
+異常な文脈の「あるある」は正常な文脈の「ないない」になる。
+
+良いユーモアに影響するもの
+
+- 文化
+- 文脈
+- タイミング
+- 自分のキャラクター
+- 相手のキャラクター
+- 関係性
+- 自分の認知をどれだけ自由にしたか
+- 固定観念からどれだけ解放されたか
+- 現実を受け入れながら、どれだけ軽やかでいられるか
+
+- 意外性の度合い
+  - 予想を裏切るが、完全に無関係ではない
+  - 「ああ、確かに」と思わせる飛躍
+- 洞察の深さ
+  - 表面的な連想か、本質的な矛盾を突いているか
+  - 「医者がりんごを嫌う」は表面的
+  - 「医療アドバイスが矛盾している」は構造的な問題を指摘している
+- 共感可能性
+  - その視点に「わかる」と思えるか
+  - 個人的すぎても、一般的すぎても弱い
+- 経済性
+  - 無駄な説明がないか
+  - 長々とした前置きで期待を高めすぎていないか
+- タイミングと文脈への適合
+  - その場に必要とされているか
+  - 状況から自然に生まれているか
+
+遊び心というのは、固定観念や常識、自分の狭い視野から解放されるのが大事。新鮮に見える。
