--- a/shared/mood/happy/praise/褒められる.md
+++ b/shared/mood/happy/praise/褒められる.md
@@ -20,3 +20,5 @@ https://youtu.be/EOIQlVc95uI?si=RMSPd8iTKHherdPZ
 褒められるのが好きにも2種類ある。
 「相手の役に立った」のが嬉しい人と、「自分の成長を感じる」のが好きな人。
 後者は根本的に相手がどうだろうと関係ない。
+
+人前で褒められるのが苦手なら、単に目立つのが苦手。褒めてくれた人だけに目を合わせて「ありがとう」や「嬉しい」だけ伝えて、話題を変えよう。「そんなことより」で。
