--- a/shared/trust/intimacy/tips/弱みを見せる.md
+++ b/shared/trust/intimacy/tips/弱みを見せる.md
@@ -29,3 +29,5 @@
 弱みはバレるよりもバラした方がいい。
 そのためには、他人から突かれるような弱みに気づかないといけない。
 例えば、ホストとかキャバとか配信者として活動していて、ガチ恋がいるのに交際相手や結婚相手がいるとかは刺される。
+
+自分から弱みを見せるとフォローされるのがうっとうしい。
