--- a/shared/music/音楽の話題.md
+++ b/shared/music/音楽の話題.md
@@ -1,8 +1,15 @@
-- 好きな曲
-- 好きな音楽家
-- 好きなジャンル
-- 一番聴いてた時期
 - 最近聞いた曲
-- おすすめの曲
-- おすすめの音楽家
+- 最近練習している曲
+- 好きな曲
+  - よく聞く曲
+  - よく歌う曲
+  - おすすめの曲
+- 好きなアーティスト
+  - よく聞くアーティスト
+  - よく歌うアーティスト
+  - おすすめのアーティスト
+- 好きなジャンル
+  - よく聞くジャンル
+- 一番聴いてた時期
 - もしコピーバンドでライブするならどんなセトリで歌うか
+- 新しい曲をどこで見つけているか
