--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -476,3 +476,5 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
   - 状況から自然に生まれているか
 
 遊び心というのは、固定観念や常識、自分の狭い視野から解放されるのが大事。新鮮に見える。
+
+誇張することで発見がある。特にモノマネや風刺みたいな芸。
