--- a/shared/joke/frameworks/フリとオチ.md
+++ b/shared/joke/frameworks/フリとオチ.md
@@ -30,6 +30,8 @@
 - フリ（セットアップ）: 状況や前提を設定し、聞き手に特定の期待を抱かせる部分
 - オチ（パンチライン）: 期待を裏切り、予想外の結末や解釈を提示する部分
 
+裏切りの例:
+
 - ダブルミーニング: 言葉の多義性を利用する (記者と汽車など)
 - 曲解: 意図的に間違った解釈をする
 - 誇張: 極端に大げさにする
