--- a/shared/meaning/意味.md
+++ b/shared/meaning/意味.md
@@ -69,3 +69,8 @@
 悪意があろうとなかろうと、次から直すならどっちでもいい。
 
 namingとも関連が深い。
+
+「何の意味があるんだ」と聞かれたら、「意味や価値といった観念から逸脱するためだ」と答える。
+
+名前より先に意味がある。
+意味に名前をつけることで概念になる。
