--- a/shared/risk/lucky/運.md
+++ b/shared/risk/lucky/運.md
@@ -155,3 +155,8 @@ https://youtu.be/q5O8O_kwtTk
 「運が悪い」と自認している人は間に合わなくて、「運がいい」と自認している人は2ページ目にデカデカと書いてある「枚数は43枚です」の文字に気づいて回答した、という実験。
 これは「視野が広い」のが良いのか、「信じる」のが良いのか。基本的には「良い情報を探す」という性質があると考えるのがいいかも。
 https://x.com/minerva_owl1/status/1838196304906002454
+
+よっぽど差がない限り、頂点に近くなるほど運の要素が大きくなる。
+人間にはそこまで差がない。
+
+ポケモンのランクマとかもTOP 10とかになるともうあとは最終日のマッチング次第なところがある。
