--- a/shared/risk/lucky/験担ぎ.md
+++ b/shared/risk/lucky/験担ぎ.md
@@ -1,5 +1,9 @@
+願掛け。験担ぎ。
+
 縁起を担いだり、神頼みしたりするのは、どこまでいっても運の要素があるから。
 それを理解するために行うのはいいかも。
 
 ただ、全てが運で決まるわけではない。
 天命を待つのは人事を尽くしてから。
+
+願掛けすれば本気ってわけじゃないけど、本気で何もかもやってもうやることがないって人は願掛けくらいしかやることがない。
