--- a/shared/sex/dating/デート.md
+++ b/shared/sex/dating/デート.md
@@ -18,3 +18,7 @@ datingがいわゆる恋愛に近いか。
 
 立ち上がる時に手を差し伸べる（比喩ではない）
 階段を降りる時や電車で腕を差し出す
+
+デートでサイゼがありかなしかは、べつに食事がメインならなんでもいい。でもうるさいとこよりは静かに話せるところがいい。
+
+デートには特別感を持たせて相手を楽しませる。これは男女問わず。
