--- a/shared/trust/intimacy/tips/弱みを見せる.md
+++ b/shared/trust/intimacy/tips/弱みを見せる.md
@@ -31,3 +31,6 @@
 例えば、ホストとかキャバとか配信者として活動していて、ガチ恋がいるのに交際相手や結婚相手がいるとかは刺される。
 
 自分から弱みを見せるとフォローされるのがうっとうしい。
+
+一旦好意を持ったら、多少欠点があっても離れにくい。
+好意を持ってもらってから弱みを見せる。
