--- a/shared/employment/一般的な給料.md
+++ b/shared/employment/一般的な給料.md
@@ -25,3 +25,5 @@
 個人事業主の場合はこの倍くらいあると同じくらい。
 
 - https://www.persol-career.co.jp/pressroom/news/research/2023/20230307_01/
+
+1万円で8時間がちょうど2025年の最低賃金くらい。
