--- a/shared/ethics/倫理.md
+++ b/shared/ethics/倫理.md
@@ -46,3 +46,5 @@ moral を善や道徳と比べると、倫理的という意味。
 「倫理観がないやつは危機感がないだけの下等生物」『テラフォーマーズ』
 
 「足りねえな。『怒りを買い』、『殺される』という『危機感』が。」『テラフォーマーズ』
+
+「殺していい理由にはならないが、殺される理由にはなる」
