--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -478,3 +478,12 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 遊び心というのは、固定観念や常識、自分の狭い視野から解放されるのが大事。新鮮に見える。
 
 誇張することで発見がある。特にモノマネや風刺みたいな芸。
+
+人それぞれ違うからこそ面白い。
+
+ユーモアの対象には多義性や矛盾がある。複数のものの見方がある。
+
+ユーモア自体は単純に「ありきたりを避ける」ということかも。
+
+ただ連想するだけでは面白みがない。
+連想したものと比較するとかしないと。
