--- a/shared/perception/modeling/抽象化.md
+++ b/shared/perception/modeling/抽象化.md
@@ -24,3 +24,6 @@
 決まった範囲の量の飴玉を決まったサイズの袋に詰める作業なら、個数か重さに抽象化すれば機械で詰められる。
 これは飴玉を規格化しているおかげでもあるし、袋という自由度が高い容器だからでもある。規格を揃えることで扱いやすくなる。条件を減らすことでも扱いやすくなる。
 サイズの決まってない曲がったきゅうりを木箱に詰めようとしたらもっと具体的な情報が必要。
+
+抽象には対象から見て親と子がある。連想で重要なのは子。属性。子の方が親より多いので、結びつけやすい。
+たとえば、りんごであれば、丸い、赤い、手のひらサイズ、すべすべの表面、などがある。
