--- a/shared/care/友人.md
+++ b/shared/care/友人.md
@@ -1,6 +1,14 @@
 # 友人
 
+## 友人とは
+
 お互いに気を遣わない関係。
+
+## 友人の恩恵
+
+- 人を紹介してもらえば、信頼を借用できる
+
+## その他
 
 まず友人とは何か。
 
@@ -293,3 +301,5 @@
 そもそも初めから誰にも気を遣わない人って友人いらないのでは？
 
 友人がたくさんいると、急に誘ってもスケジュールが合いやすい。
+
+友人がいると、人を紹介してもらって、信頼を借用できる。
