--- a/shared/trust/intimacy/親近感.md
+++ b/shared/trust/intimacy/親近感.md
@@ -48,3 +48,5 @@
 相手の欠点や苦手なことを知って調整するのは、批判や諦めではなく、相手を理解した柔軟な対応。
 
 キーボードから目を離してもタイピングできたり、ショートカットキーを体が覚えたり、言葉にしなくても通じ合えたりすると信頼できている。
+
+特別扱いするのは関心というよりもintimacyかも。
