--- a/shared/trust/信頼.md
+++ b/shared/trust/信頼.md
@@ -575,3 +575,5 @@ https://www.humanvalue.co.jp/keywords/theory-of-success/
 恩恵があることと、弊害がないこと。
 
 副作用が強い薬は、期待感を持って飲んだとしても、安心感を持ってはいけない。分量や症状に注意して、油断せずに飲む。
+
+信頼し合っている関係がラポール。
