--- a/shared/trust/信頼される.md
+++ b/shared/trust/信頼される.md
@@ -1,3 +1,13 @@
+- 実績を積み重ねる
+- 背景を共有する
+- 相手の役割や時間を尊重する
+- 具体への関心を示す
+- 選択肢を相手に残す
+- 受け止めて返す
+- 進め方やゴールを合意する
+- 自分の弱みを見せる
+- 相手の弱みを知った上で誰にも話さない
+
 信頼されるということは、良い方に期待されるということ。
 安心感や期待感を与えないといけない。
 
@@ -9,6 +19,4 @@
 信頼を得るために自分の話をする。
 特に失敗談は心理的安全性に繋がる。
 
-実績を積み重ねることで信頼を得る。
-
-弱みを握った上で、隠す。
+ある面で信頼されても好かれるとは限らない。
