--- a/shared/trust/信頼の受け渡し.md
+++ b/shared/trust/信頼の受け渡し.md
@@ -16,3 +16,5 @@
 - 相手を持ち上げようとしないで、さっぱりと伝える
 
 信頼を借用する場合、相手の信頼も損なってしまうことを自覚しないといけない。
+
+共通の知り合いがいる場合、そっちから信頼を借りるパターンもある。「XXさんがすごく歌が上手い人がいるって言ってました」みたいに、相手の知り合いと知り合いであることを示すと、親近感が湧きやすい。ある種紹介してもらうのに似ている。
