--- a/shared/politics/面子を守る.md
+++ b/shared/politics/面子を守る.md
@@ -1,2 +1,6 @@
 語用論では「醤油とって」という「指令」の意図が相手の面子を潰す場合もあるので、「醤油ない？」という「断定」の意図に置き換えることで面子を守る、と考える。
 間接的な言い方をする人は自分の責任を回避しているというよりも、相手の面子を守っている。
+
+自分に都合のいい面子を立てることで、相手がそれを自己イメージとして強調される。誘導される。
+
+責任をとって辞めるのも面子を守るための行動。
