--- a/shared/life/生殖.md
+++ b/shared/life/生殖.md
@@ -38,3 +38,6 @@
 社員が子供を大学に入れられない会社が大卒を採用するのはフリーライド。潰さないといけない。
 
 人類の再生産という点で見れば、平均的に二人で二人以上子供を育てないと足りない。人口が減っていく。
+
+長生きする、って生殖の面からすると重要ではない。
+子供が育つまでは生きていてもらわないと困るけど。
