--- a/shared/sex/dating/tips/男性にモテたい.md
+++ b/shared/sex/dating/tips/男性にモテたい.md
@@ -1,7 +1,7 @@
-- 若い
-- かわいい
 - 健康
-- スタイルがいい
+- 若い
+  - かわいい
+  - スタイルがいい
 
 男性の場合、女性がモテているかどうかではあまり見ない気がする。
 好みかどうか、若くて子供を産めるかどうか。
@@ -22,3 +22,9 @@
 特に30歳以下ならだいたいモテる。
 
 どれだけモテても結婚できなかったら穴モテだったということ。
+
+男性は女性の形をあまり重視しない。
+
+スレンダーな女性が男性にモテるのは、細いと若く見えるからと言われている。18-20歳くらいに多いBMIが19くらい。
+逆に、若い人はそもそもあえて痩せる必要がない。
+https://youtu.be/U9o7jvc1TMU?si=H18xuqub6eCFiXg-
