--- a/shared/people/appearance/outfit/tips/自分に合った装いを選ぶ.md
+++ b/shared/people/appearance/outfit/tips/自分に合った装いを選ぶ.md
@@ -1,3 +1,28 @@
 - 顔が良かったらシンプルでいい
 - 肌が綺麗なら、同じく艶のある素材を合わせる
 - ハードな印象なら、ソフトな要素で釣り合いをとる
+
+ゴツい人は首のある服、短丈の服、生地の薄い服は似合いにくい。横幅が強調される。
+
+どうやって自分に似合う服を選べばいいか。
+
+友人や店員さんに見てもらった方がいい。
+
+コントロールしやすいところ:
+
+- 髪
+- 化粧
+- 服
+- 靴
+- 小物
+
+コントロールしにくいところ:
+
+- 顔
+- 体型
+
+まずはコントロールしやすいところをコントロールしにくいところに合わせた方がいい。
+その上で、コントロールしにくいところも変えられるなら変えてもいい。痩せるとか、筋肉をつけるとか。
+
+似合わない色は、服が強すぎて顔が負けるか、服が弱すぎて顔が浮いているか、どっちか。
+パーソナルカラーよりは、トーンが大事。
