--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -487,3 +487,18 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 
 ただ連想するだけでは面白みがない。
 連想したものと比較するとかしないと。
+
+死にたいと思わないためにユーモアがある。偽りの希望。
+
+偽りでも希望があることで活路が見出せることもある。
+
+真に希望があると、そもそもユーモアを必要としないことがある。偽りの希望を探す必要がない。
+
+外に趣味がある人ってユーモアない気がする。
+
+ユーモアは楽しみを生み出す。
+
+深い話を軽い話のように話せるのもユーモアの利点かも。
+
+人を対象にしたユーモアは時に相手を傷つけてしまうことがあるので、その場の状況を対象にしたユーモアの方が扱いやすい。
+話を奪われた時に「食いつき早すぎやろ、ブラックバスか」よりは、「話の取り合いになってるよ笑」みたいに言うだけの方が和ませやすい。
