--- a/shared/politics/面子を守る.md
+++ b/shared/politics/面子を守る.md
@@ -4,3 +4,9 @@
 自分に都合のいい面子を立てることで、相手がそれを自己イメージとして強調される。誘導される。
 
 責任をとって辞めるのも面子を守るための行動。
+
+人前で依頼したり何かを要求したりするのは、相手が下に見られる場合があるので良くない。
+これを防ぐために間接的に依頼することがある。これは責任逃れの場合もあるけど、気遣いの場合もある。たとえば「窓を閉めて」の意味で「ちょっと寒くなってきたなぁ」みたいな。
+
+責任逃れで間接的に依頼する場合、感謝しないことが多い。
+依頼を達成した際に感謝されたら気遣い、されなかったら責任逃れとして判断する。
