--- a/shared/trust/intimacy/親近感.md
+++ b/shared/trust/intimacy/親近感.md
@@ -50,3 +50,17 @@
 キーボードから目を離してもタイピングできたり、ショートカットキーを体が覚えたり、言葉にしなくても通じ合えたりすると信頼できている。
 
 特別扱いするのは関心というよりもintimacyかも。
+
+対象を理解する、特に癖を把握するのが大事。
+
+人はそもそもピーキーな性能をしている。
+何か具体的な機能のために美しく作られたものではない。
+
+artには意図があるものだけど、ほとんどの人はそのように作られてはいない。
+何らかの意図を持って人工的に作られたものではない。だから、癖が強い。
+
+人の癖を理解して、上手く付き合うのがintimacyの肝。
+
+慣れ。
+
+自分の癖を抜いて対象に合わせるのも大事。C言語の癖を抜いてPythonで書く、みたいな。
