--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -502,3 +502,5 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 
 人を対象にしたユーモアは時に相手を傷つけてしまうことがあるので、その場の状況を対象にしたユーモアの方が扱いやすい。
 話を奪われた時に「食いつき早すぎやろ、ブラックバスか」よりは、「話の取り合いになってるよ笑」みたいに言うだけの方が和ませやすい。
+
+攻撃的な人は直接的に人を対象にしたユーモアよりも状況を対象にしたユーモアを使うように心がけた方がいい。ぽろっと出てしまうことがある。
