--- a/shared/memory/記憶に残る.md
+++ b/shared/memory/記憶に残る.md
@@ -65,3 +65,6 @@
 価値がない人のことはぼんやりとしか覚えてないので、どこが頭悪いと思ったとか細かいことを聞かれても覚えてないしなんなら分析もしてない。
 
 目や口が大きいと印象に残りやすい。
+
+口癖っぽいことをあえて繰り返して印象づける。
+ジョークで自分が言わなそうなことを繰り返し言う場合もある。
