--- a/shared/communication/media/メディアの例.md
+++ b/shared/communication/media/メディアの例.md
@@ -2,20 +2,26 @@
 
 ## 言語的 verbal
 
-- 言語
-- 文章
-  - 雑誌や新聞、書類（文章、図表、画像、などの複合）
+- 言葉
+- 文書
+  - 印刷物
+    - 書籍
+    - 雑誌
+    - 新聞
+  - 手紙
+  - 論文
 
 言語によるコミュニケーションは特にverbal communicationという。
 verbal communicationは言語によるコミュニケーションというより、言語「のみ」によるコミュニケーションなので、複合的なものは違う。
 
 ## 視覚的 visual
 
-- 画像・静画 image
-  - 絵 picture
+- 静画
+  - 絵
+    - イラスト
   - 写真
   - 図表
-- 映像・動画
+- 動画
 - 記号
 - ボディランゲージ
   - ジェスチャー
@@ -23,15 +29,19 @@ verbal communicationは言語によるコミュニケーションというより
 
 ## 聴覚的 Aural
 
+- 振動
 - 信号
 - 音声
   - 歌
-
-## その他
-
-- 匂い
+- 演奏
+  - 楽器演奏
 
 ## 複合的（マルチメディア）
 
 - 映像（動画 + 音声）
-- 4D（動画 + 音声 + 匂い）
+- 4D（動画 + 音声 + 匂いなど）
+- 書類（文章、図表、画像、などの複合）
+
+## その他
+
+- 匂い
