--- a/shared/communication/チャネル.md
+++ b/shared/communication/チャネル.md
@@ -1,7 +1,12 @@
 # チャネル Channel
 
+経路。
+
 情報が伝達される手段や方法のこと。相手との接点。
 
 狭義の「コミュニケーション」で特定のチャネルを指すことがある。
 
 チャネルの特徴にはメディアの特徴が反映される。
+
+チャネル自体は伝達する行為そのものに近い。
+たとえば、「手紙」がメディアで、手紙を配達する「郵便」がチャネル。
