--- a/shared/communication/channels/チャネルの例.md
+++ b/shared/communication/channels/チャネルの例.md
@@ -1,41 +1,36 @@
 # チャネルの種類
 
+- 対面
+  - イベント
+  - 飲み会
+- 口頭
 - 郵便
-- Web
-- SNS
-- ポッドキャスト
+- 書類の手渡し (メモ、資料、など)
+- インターネット
+  - 動画配信 (YouTube, など)
+    - 生放送
+    - 録画放送
+  - ポッドキャスト
+  - SNS (Twitter, Facebook, Instagram, など)
+  - 検索エンジン
 - 広告
-- 中吊り広告
-- 電話回線
+  - 電子広告
+  - 中吊り広告
 - テレビ放送
 - ラジオ放送
-- 印刷物
-- 新聞
-- 雑誌
-- 書籍
-- 対面
-- 会議、会話 (meeting)
-- 音声通話
-- ビデオ通話
+- 書店
+- 新聞販売
+- 図書館
+- 会議・会話
+- 通話・電話回線
+  - 音声通話
+  - ビデオ通話 (Slack, Zoom, など)
+- FAX
 - ボイスメッセージ
 - 電子メール
-- チャット
-- メモ
-- 論文・レポート
-- 書類・ドキュメント
 - テキストメッセージ
-- ファイル
-- 手紙
-- FAX
-- 電子広告
-- 検索エンジン
-- セックス
-- イベントや飲み会
-- Twitter
-- Facebook
-- Slack
-- Discord
-- LINE
-- Instagram
-- Google Meet
-- Zoom
+  - チャットサービス (Slack, Discord, LINE, など)
+- ファイル転送
+- 視線
+- セックス・スキンシップ
+- など
