--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -504,3 +504,18 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 話を奪われた時に「食いつき早すぎやろ、ブラックバスか」よりは、「話の取り合いになってるよ笑」みたいに言うだけの方が和ませやすい。
 
 攻撃的な人は直接的に人を対象にしたユーモアよりも状況を対象にしたユーモアを使うように心がけた方がいい。ぽろっと出てしまうことがある。
+
+- 謎かけや駄洒落
+- 誇張
+- 皮肉
+
+期待を裏切る意外性が特に重要。不条理を楽しむ知的能力。
+
+親和性、創造性、とも関連する。
+
+矛盾した組み合わせやあり得ない組み合わせに意外性がある。
+
+一つの言動に複数の文脈があると気づいて、相手が予想している文脈とはあえて外す。
+ただ、これには相手にもあえて文脈をずらしたことがわかる程度の知能が必要。
+
+知能が低い人と接しているとユーモアが失われる可能性がある。
