--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -519,3 +519,5 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 ただ、これには相手にもあえて文脈をずらしたことがわかる程度の知能が必要。
 
 知能が低い人と接しているとユーモアが失われる可能性がある。
+
+異常な文脈を共有するのはユーモアの大事なところ。
