--- a/shared/government/legal/法律.md
+++ b/shared/government/legal/法律.md
@@ -38,3 +38,6 @@
 日本の法律では、被害者や冤罪被害者に対する補償が十分とは言えない。関係者や加害者の公開処刑と肉刑によって罪を拭う必要がある。
 
 誘拐未遂を殺人未遂と同じ罪にするのは良い案だと思う。強盗なんかも統合して良い。
+
+法は国が暴力を独占するための仕組みなので、善とか悪とかではない。ただ、法を犯すと国に暴力を振るわれて都合が悪い。
+ほとんどの人は国がちゃんと自分たちのために動いていればそれを許容するし、選挙という正規のプロセスを踏んで法を変えることもある。
