--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -521,3 +521,20 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 知能が低い人と接しているとユーモアが失われる可能性がある。
 
 異常な文脈を共有するのはユーモアの大事なところ。
+
+ユーモアは期待を外すというよりも、異なる文脈の混同に面白みがあると思う。
+「（通話で）今誰かといる？」
+「いるけど、、、そういうのじゃないから」
+「別に疑ってねえよ」
+みたいな。普通に誰かといるか聞いてるだけなのに、恋人が浮気を疑ってるみたいな文脈をあえて混同している。
+まぁ、広い意味で言えばこれも不調和ではある。
+
+ユーモアの基本は期待を裏切ること。
+
+フリを裏切る、
+比喩や慣用句を字義通りに受け取る、
+些細なことを過剰に分析する、
+重大なことを過剰に軽視する、
+言葉遊び、
+
+言葉遊びが成立するのは、期待される文脈と違う文脈で言葉が使われるからかな。
