--- a/shared/technique/スキル.md
+++ b/shared/technique/スキル.md
@@ -1,3 +1,7 @@
 後天的に身につける技術をスキルという。
 
-スキルはtrainingの文脈。技術的な慣れ。
+スキルはtrainingの文脈でもいい。技術的な慣れ。
+
+上手いか下手かはそもそもそのスキルについて知らないと判別できない。会話のスキルがない人は相手が会話上手か下手かもわからない。
+
+スキルについて知識があっても実践できるかどうかは別。緊張や動揺で実践できなくなることもある。
