--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -538,3 +538,28 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 言葉遊び、
 
 言葉遊びが成立するのは、期待される文脈と違う文脈で言葉が使われるからかな。
+
+文脈の境界線を意図的に曖昧にする。
+
+期待されたフレームからの逸脱。
+
+誤解を重ねる。ボケは重ねて強調するのも面白い。
+「空気読んで」
+「CO2濃度は正常です」
+「そうじゃなくて…」
+「酸素も問題ありません」
+
+抽象度の期待を外す。
+
+「最近どう？」
+「体温36.4度、血圧120/80、気分は10段階で6.7です」
+
+期待の種類
+
+意味のある情報を求める→意味のない情報
+抽象度を合わせる→過剰な抽象化、具象化
+役割や立場に合わせる→立場の逆転
+重要度を合わせる→過剰な重視、軽視
+
+ユーモアは遊び心。
+いつもと違うことをする。
