--- a/shared/human/body/muscle/training/筋トレを始める.md
+++ b/shared/human/body/muscle/training/筋トレを始める.md
@@ -1,2 +1,11 @@
 筋トレを始めたら、目標とする負荷を決めて、負荷の伸びを記録する。
 最初は全部できなくてもいいので、記録を伸ばす。
+
+まずは以下の5つが基本種目。
+これらの種目の中でもさらに負荷などで細かい分類があるけど、まずはノーマルなものか、それができなければ負荷が小さいものから始める。
+
+- 腕立て伏せ
+- 上体起こし
+- 懸垂
+- スクワット
+- プランク
