--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -563,3 +563,5 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 
 ユーモアは遊び心。
 いつもと違うことをする。
+
+下ネタが面白いのは隠語が多いのもあるかも。すいちゃんがマリカーしながら「もっと抜きたい。スバルちゃんで抜きたい」って言ってたのも言葉遊び。隠語はそもそも言葉遊びの面もある。
