--- a/shared/lifestyle/housing/家探し.md
+++ b/shared/lifestyle/housing/家探し.md
@@ -29,3 +29,6 @@
 
 新しい物件検索のサイト
 https://comfy.maison/
+
+引越し先を決める前に「管理会社にクレーム履歴を確認してもらう」手がある。同じ棟の住民の民度がわかる。
+https://x.com/psypsytuki/status/2021733248414760987?s=61
