--- a/shared/lifestyle/housing/良い物件の条件.md
+++ b/shared/lifestyle/housing/良い物件の条件.md
@@ -46,3 +46,8 @@
 病死ならどうでもいい。
 
 サブリース物件はよくないらしい。
+オーナーにとっては空室時も安定収入がある代わりに手数料が高く、解約が難しい。
+入居者にとってもトラブル時の責任の所在が曖昧になったり、手数料が高額だったりする。不動産会社が倒産すると立ち退きになりやすい。
+
+引越し先を決める前に「管理会社にクレーム履歴を確認してもらう」手がある。同じ棟の住民の民度がわかる。
+https://x.com/psypsytuki/status/2021733248414760987?s=61
