--- a/shared/management/戦略.md
+++ b/shared/management/戦略.md
@@ -26,3 +26,7 @@ https://twitter.com/ysk_motoyama/status/1693771064961343971?s=20
 
 戦いに「負ける」ことすらも戦略。
 損が小さい戦場ではあえて「負ける」ことでもっと大きな利益を求めることがある。
+
+戦略レベルでは、勝ち負けよりも、生き残って利益を得ることを考える。
+勝ち負けというのは戦術レベルの話。
+日本はWW2で降伏したけど、国が無くなったわけじゃないし、その後の発展を考えると戦争で利益を得た側でもある。
