--- a/shared/music/音楽の話題.md
+++ b/shared/music/音楽の話題.md
@@ -1,15 +1,22 @@
+## 鑑賞
+
 - 最近聞いた曲
-- 最近練習している曲
 - 好きな曲
   - よく聞く曲
-  - よく歌う曲
   - おすすめの曲
 - 好きなアーティスト
   - よく聞くアーティスト
-  - よく歌うアーティスト
   - おすすめのアーティスト
 - 好きなジャンル
   - よく聞くジャンル
 - 一番聴いてた時期
-- もしコピーバンドでライブするならどんなセトリで歌うか
 - 新しい曲をどこで見つけているか
+
+## 演奏
+
+- もしコピーバンドでライブするならどんなセトリで歌うか
+- よく歌う曲
+- よく歌うアーティスト
+- 最近練習している曲
+- 一番自信がある曲やアーティストは？
+- 歌いやすい曲やアーティストは？
