--- a/shared/human/being/well/自己肯定感.md
+++ b/shared/human/being/well/自己肯定感.md
@@ -6,11 +6,15 @@
 
 ## 自己肯定感でないもの
 
-- 自分は愛されていると思う
-- 自分を好きになる
-- 自己肯定感が高まる
-- 自分には生まれてきた意味がある
-- 自分には生きている価値がある
+- 自己愛
+  - 自分は愛されていると思う
+  - 自分を好きになる
+- 自己効用感
+  - 誰かの役に立っている
+  - 自分には生きている価値がある
+  - 自分には生まれてきた意味がある
+
+自己愛や自己効用感と混同されやすい。
 
 ## その他
 
