--- a/shared/learning/学習.md
+++ b/shared/learning/学習.md
@@ -323,3 +323,5 @@ OODA ループが学習の基本。
 現状分析、情勢の観察が最も重要な能力。情勢が理解できてこそ情報が役にたつ。主観や感情を排して、正しく情報を使う。
 
 理論だけじゃなくて、実践まで覚える。AIに例題出してもらうとか、AIと一緒に何か作るとか。
+
+何かを学ぶときに、どういうところを見ればいいかを学ぶ。
