--- a/shared/music/theory/rhythm/リズム.md
+++ b/shared/music/theory/rhythm/リズム.md
@@ -116,3 +116,5 @@ https://youtube.com/shorts/yS5BJeNc4Ag?si=bdOxnJITuJUFaPbD
 
 空手は体幹を動かさずに回転で打つ、ボクシングは体幹から動かす。黒人リズムも似たところがある。
 https://youtube.com/shorts/NxEwVb1Y-4o?si=Ocrh7b8EpR0IvnYc
+
+リズムはパターン。韻律。強弱や短長、間、いった部分。音だけじゃない。言語的な韻は響きの韻。ラップは特にリズムを重視した音楽。
