--- a/shared/people/appearance/シルエット.md
+++ b/shared/people/appearance/シルエット.md
@@ -4,9 +4,15 @@
 - Iライン: 全身すっきり
 - Aライン: 上半身すっきり、下半身ゆったり
 - Oライン: 全身ゆったりで、三首を絞る
-- Xライン: 全身ゆったりで、腰を絞る
+- Xライン: 全身ゆったりで、腰を絞る (Aラインの一種とも言える)
 
 これらのパターンに当てはまらない中途半端なシルエットはださくなりがち。
+
+## I
+
+タイトな服を着ても、体型がIラインでないならIラインにならない。
+
+Iラインを作る時は上下で幅を合わせる。だいたいは上着を着たりするとトップスが広くなりがちなので、ボトムスが細くなりすぎないようにする。中途半端だとダサい。
 
 ## その他
 
