--- a/shared/family/children/育児.md
+++ b/shared/family/children/育児.md
@@ -90,3 +90,5 @@ https://x.com/shiroku__mama/status/1963543241292136671?s=12
 とはいえ最近は都会生まれの割合も増えてきているので、逆に親元で大きな家族を形成することも増えるかも。
 
 子どもが非行に走らないようにするには、子どもがふと振り返ったときに親と目が合わないといけない。
+
+教育ママとか言いながら自分で何も教えられないのは恥。
