--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -565,3 +565,5 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 いつもと違うことをする。
 
 下ネタが面白いのは隠語が多いのもあるかも。すいちゃんがマリカーしながら「もっと抜きたい。スバルちゃんで抜きたい」って言ってたのも言葉遊び。隠語はそもそも言葉遊びの面もある。
+
+良い出来事を思い出して苦難に耐えるのは、ユーモアがない人の耐え方だ。
