--- a/shared/joke/frameworks/フリとオチ.md
+++ b/shared/joke/frameworks/フリとオチ.md
@@ -62,3 +62,6 @@
 漫才だと、フリとオチを小さく繰り返して、最後の大オチで締める流れも定番。
 
 フリとオチとは別に、本題に入る前の導入（まくら、つかみ）がある場合もある。特に落語。
+
+わかりやすいフリがあると、観客も「ボケがくる」と身構えるので、異常な振る舞いがあってもオチとして認識しやすい。
+いきなり異常なことをするのは笑いよりもむしろびっくりする。
