--- a/shared/production/product/ユーザーへのフィードバック.md
+++ b/shared/production/product/ユーザーへのフィードバック.md
@@ -1,2 +1,4 @@
 ユーザーにエラーを返すなら、ユーザーが対処できるようなエラーにしないといけない。
 「時間を置いて実行してください」かもしれないし、「入力をこのように修正してください」かもしれない。
+
+プレイリストなどに「すでに登録されています」は要らない。結果が変わらない。ただ、なんらかのフィードバックというか、「処理した」のがわかるようにはした方がいい。
