--- a/shared/sports/running/ランニング.md
+++ b/shared/sports/running/ランニング.md
@@ -7,3 +7,9 @@
 
 腿を上げるのではなくて、骨盤を回転させて後ろの足を力強く押し出すと自然と逆の足が上がる。
 https://www.youtube.com/shorts/W2Ne_FFItk0
+
+走る時は足をついたらすぐ離すのが大事。
+足が離れないってことは地面をしっかり押せてない。エネルギーの無駄が大きい。
+
+基本的な練習方法
+https://youtube.com/shorts/nZsByu3v19g?si=PVhkhLei_EjDsiUk
