--- a/shared/math/数学.md
+++ b/shared/math/数学.md
@@ -1,5 +1,7 @@
 # 数学
 
+- 数学に帰納法はない
+
 数学は知識としての様々な性質の面と、応用的な技術の面が混ざっててごちゃごちゃしてる。
 
 数学は公理や定理と表記をとにかく覚えないと始まらない。最初は暗記科目。
@@ -18,3 +20,8 @@
 膨大な公理や定理に、そもそも数という形が決まった中で無限の応用ができる。
 
 数学そのものは単位を持ってないけど、数学を現実世界に適用する場合には必ず単位がある。単位を揃えないと適用できない。
+
+数学に帰納法はない。
+「いくつかのケースで正しいから、いつも正しい」という考えは数学では成り立たない。常に全てのケースを精査する。
+
+数学的帰納法は帰納法ではない。キチガイが命名してる。
