--- a/shared/sex/dating/tips/男性にモテたい.md
+++ b/shared/sex/dating/tips/男性にモテたい.md
@@ -28,3 +28,5 @@
 スレンダーな女性が男性にモテるのは、細いと若く見えるからと言われている。18-20歳くらいに多いBMIが19くらい。
 逆に、若い人はそもそもあえて痩せる必要がない。
 https://youtu.be/U9o7jvc1TMU?si=H18xuqub6eCFiXg-
+
+女性は35歳あたりから妊娠しづらくなる以上、男性には若い方が好まれる。若い方がたくさん産める。
