--- a/shared/voice/training/tips/声を響かせる.md
+++ b/shared/voice/training/tips/声を響かせる.md
@@ -9,9 +9,11 @@
 声が響くポイントは主に3つある。
 以下の優先度で重要。
 
-1. 口
-2. 喉
+1. 喉
+2. 口
 3. 鼻
+
+真っ先に鼻を鳴らそうとする人もいるけど、それでは上手くならない。
 
 ## 口に響かせる
 
@@ -22,6 +24,9 @@
 
 練習では口も大きく開けて歌う。
 顎の力を抜く練習と、口内の空間を広く保つ練習。
+
+あくまでも練習で口を大きく開けるのは筋トレ。
+本番では口を大きく開けすぎると声が漏れすぎてよく響かない。程よく開ける。
 
 口に響かせる時は後ろの方の上側に響く感じ。前歯や前歯の裏、唇、舌などが痺れる感じがあるなら、もっと軟口蓋を上げて後ろの方を上に広げたほうがいい。口内が狭い。
 
