--- a/shared/voice/training/tips/腹から声を出す.md
+++ b/shared/voice/training/tips/腹から声を出す.md
@@ -60,3 +60,5 @@ https://youtu.be/u6esSnfp_Bk?si=MHiWE6oXoJUIPVO4
 尻を締める。
 
 強く吐ききったあとに力を抜くとぶはっと息が残っている呼吸なら、喉で強く吐くことはできない。喉で強く吐くと胸式呼吸になって息が残らない。
+
+腹から声を出すことを習慣づけるなら、高いところで声が出なかったとしても喉はそのまま。常に腹からの息だけで声を出す。
