--- a/shared/humor/tips/ユーモアのある言葉選び.md
+++ b/shared/humor/tips/ユーモアのある言葉選び.md
@@ -15,3 +15,6 @@
 比喩も具体的な言葉選び。
 
 女の子が「太った」って言ってるのに「俺はぽっちゃりくらいが好きだけど」みたいにどうでもいい返しをしても仕方ない。まぁ、好かれているならいいかもしれないけど、基本は相手への共感。
+
+予想される普通の返しから「外れている」のが大事。
+比喩はパターンが多くて、相手の予想とは違った返しになりやすい。
