--- a/shared/entertainment/接待.md
+++ b/shared/entertainment/接待.md
@@ -163,3 +163,14 @@ https://youtu.be/KQqu7UhzEng?si=BRjUW1WkUdxErGA9
 どっちが「オイシイ」か。
 
 相手を笑わせるだけじゃなくて、相手の話で笑うのも相手を楽しませる。
+
+誰かに楽しんでほしい、
+楽しめてない人に目がいく、
+俺が楽しませる、
+という意識。
+それに自分が大きく関与する、当事者意識。
+
+「自分がどうか」ではなく「周囲がどうか」を見る。相手が楽しんでいるのを喜ぶ。
+ある種の愛。
+
+https://youtu.be/3wrS_riNOCI?si=hGbWb0AeaPU5DISW
