--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -567,3 +567,9 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 下ネタが面白いのは隠語が多いのもあるかも。すいちゃんがマリカーしながら「もっと抜きたい。スバルちゃんで抜きたい」って言ってたのも言葉遊び。隠語はそもそも言葉遊びの面もある。
 
 良い出来事を思い出して苦難に耐えるのは、ユーモアがない人の耐え方だ。
+
+おかしさ、弱さ、失敗、回り道、寄り道、無駄、無意味、を許容する。
+
+ユーモアのある振る舞いというのは、解決に向かう振る舞いではない。むしろ回り道や寄り道をするような振る舞いになる。無駄を愛せ。
+
+回り道は逃げ道なのかも。解決に直結はしてないけど、気が楽になって動きやすくなる。
