--- a/shared/humor/ユーモアの形式.md
+++ b/shared/humor/ユーモアの形式.md
@@ -1,5 +1,15 @@
 どうやってユーモアを生み出すか。
 
+## 何がおかしいか
+
+- おかしな状況
+- おかしな論理
+  - おかしな理屈
+  - おかしな対処
+- おかしな言葉選び
+
+## 具体例
+
 - 異常な文脈（フリとオチ）
   - 三段論法
     - 三段論法の崩し
@@ -60,3 +70,13 @@
 - 冷笑
 - どんでん返し
 - 常識の逆転、異常な文脈に飲み込まれる
+
+## メモ
+
+おかしな理屈、論理
+
+あえておかしくする。
+
+ユーモアの形式は何がおかしいか。言葉選びとか、対処とか。
+
+意味のある情報交換が重要な場面で意味のないことを言うのが面白いこともある。
