--- a/shared/talk/small/スモールトーク.md
+++ b/shared/talk/small/スモールトーク.md
@@ -7,3 +7,12 @@
 スモールトークは相手の話を聞くというよりも自分主導で深い話に繋げていくのがいい。
 
 スモールトークで興味を持ってもらうにはインパクトのある自己紹介があるといい。ユーモアが必要。
+
+「私はあなたのことをこう思いました」を伝えるのは一つのコンテンツになる。
+誰しも自分がどう思われているかは興味がある。
+
+わざと外す
+両極端を例示して真ん中に誘導する
+本気で当てに行く
+
+https://youtu.be/fq3ENVVHLQE?si=J3P4G6FZnSsAF7Co
