--- a/shared/human/body/face/顔.md
+++ b/shared/human/body/face/顔.md
@@ -20,3 +20,7 @@
 インカメラで自分の顔を正面から撮って、普段鏡で見る顔と違ったら左右対称になってない。顔に歪みがある。
 
 甘いか渋いか。
+
+服が黒ばっかりになってしまうと、顔に目がいく。
+美男美女ならいいけど、そうでないならむしろ服に目がいく方がいい。
+https://youtu.be/lw0Y0XSziZM?si=Huugc_d0JTQ_Dv8S
