--- a/shared/religion/宗教.md
+++ b/shared/religion/宗教.md
@@ -1,4 +1,4 @@
-宗教# 宗教
+# 宗教
 
 宗教は、Education + Engagementでできている。
 
@@ -36,3 +36,7 @@
 家族や組織と同じように、宗教も関係を維持するために努力を必要とする。能動的に関係を維持することそのものが重要。
 
 日本は宗教先進国すぎて、もはや宗教という形式すら残ってない。ただ慣習があるだけ。意識しなくても振る舞いの中に教えが馴染んでいる。
+
+宗教は政治の一部でしかない。本当の政教分離はあり得ない。
+
+信仰と違って、宗教は政治的に生み出されたものでしかない。
