--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -573,3 +573,57 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 ユーモアのある振る舞いというのは、解決に向かう振る舞いではない。むしろ回り道や寄り道をするような振る舞いになる。無駄を愛せ。
 
 回り道は逃げ道なのかも。解決に直結はしてないけど、気が楽になって動きやすくなる。
+
+目立ったり、アイデンティティを確立したりするためにユーモアを求める場合がある。
+
+ユーモアのある返しのためには、普通の返しはぱっと思いつくくらいでないといけない。
+
+ユーモアというのは「作る」ものじゃなくて「見つける」ものなのかも。
+
+おかしなもの、不条理、不調和に対して、「どう対処するか」がユーモア。
+
+どうやっておかしなものを見つけるか。
+なんでもないものにおかしな解釈をつける。
+
+たとえば「会議が多い」という事象あるいは問題に対して、
+「これは世界がおかしい！世界を滅ぼしましょう！」と攻撃的なオチにする。
+「会議を減らすために会議をするしかないね」と自己高揚的なオチにする。
+といった、対処の方向性がユーモアのスタイルになる。
+
+ユーモアの形式は、何がおかしいか、にあたる。
+誇張や本末転倒といったおかしな対処を考える方法がある。
+
+単純におかしなものを見つける、おかしな状況を設定して想像するのもユーモア。
+
+違和感や意外性が大事。不調和。不調和というのは結局、おかしいってこと。
+
+おかしな言動
+おかしな解釈
+おかしな状況
+おかしな対処
+
+見つける、模倣する
+作る、設定する
+
+「もしも」を考える。
+もしもこんな対処をしたら、もしもこんな状況になったら、もしもこんな人がいたら、とか。
+
+ユーモアの対象が人かそれ以外かもあるかも。
+「会議が多い」とかはどれだけ攻撃してもべつにいい。人が対象だと傷つけてしまう。
+個人と集団でも違うか。集団は傷つかない。
+
+面白いかどうかはともかく、つまらなくなければ十分。
+
+旗を裏側から見て「もしも世界に日本語を左右反転させた文字があったら」と考えてみるとか。面白いわけではないけど、つまらなくはない。
+
+ツッコミが一旦驚くだけでボケをスルーして、後からまとめてツッコミを入れる手法もある。
+
+発想がありきたりだとつまらない。予想できてしまって、おかしくはない。
+
+おかしな状況におかしな対処まで加わるとなおさらおかしくなる。
+
+プレイヤーはユーモアがない方が無駄な発想がなくて強い面もあると思う。練習ではユーモアが役にたつけど。ただ、サッカーなどで咄嗟の発想の面白さみたいな部分がある。
+
+対戦ゲームでは、突飛な発想があると予想しづらい。
+
+ユーモアはなぜ予測可能性を、ひいては信頼性を下げないんだろう？
