--- a/shared/humor/ユーモアの形式.md
+++ b/shared/humor/ユーモアの形式.md
@@ -3,10 +3,13 @@
 ## 何がおかしいか
 
 - おかしな状況
+- おかしな解釈
+- おかしな対処
+- おかしな言動
+  - おかしな言葉選び
+  - おかしな動き
 - おかしな論理
-  - おかしな理屈
-  - おかしな対処
-- おかしな言葉選び
+- おかしな理屈
 
 ## 具体例
 
@@ -80,3 +83,6 @@
 ユーモアの形式は何がおかしいか。言葉選びとか、対処とか。
 
 意味のある情報交換が重要な場面で意味のないことを言うのが面白いこともある。
+
+自分がロボットという前提で話をする、みたいなのもユーモア。
+でも事前に打ち合わせしたツッコミがいないと気づかれにくい。
