--- a/shared/people/appearance/beauty/makeup/ベースメイク.md
+++ b/shared/people/appearance/beauty/makeup/ベースメイク.md
@@ -1,12 +1,16 @@
 主にファンデーションで肌の色を整えつつ、ポイントメイクを載せやすくする。
 
-以下の順で施す。
+## 手順
 
-1. （スキンケア）
-2. 日焼け止め（必要に応じて）
-3. 化粧下地
-4. ファンデーション
-5. フェイスパウダー（リキッドファンデーションの場合）
+1. スキンケア
+2. 化粧下地（必要に応じて）
+   1. 日焼け止め
+   2. テカリ防止
+   3. 乾燥防止
+3. ファンデーション
+4. フェイスパウダー
+
+## 化粧下地を使うかどうか
 
 化粧下地はファンデーションのムラを減らし、持ちを良くする。
 肌の凹凸をならし、テカリを抑える効果がある。
@@ -16,6 +20,12 @@
 化粧下地が多いと化粧崩れの原因になることもある。
 
 日焼け止めには化粧下地と兼用のものもある。
+
+化粧下地とファンデーションよりも薄めにメイクしたい時は BB クリームや CC クリームを選ぶことがある。
+BB クリームは薄く肌色を整えて、CC クリームは薄く肌色を変化させる。
+ファンデーションするほどではないなら、まずは BB クリームから入ってもいいかも。
+
+## その他
 
 ファンデーションには主にリキッド（液体）とパウダー（粉末）がある。
 リキッドの場合、油分による化粧崩れを防止するため、フェイスパウダーを上に載せることもある。
@@ -33,6 +43,10 @@ https://academy.shiseido.co.jp/magazine/%E3%81%84%E3%81%BE%E3%81%95%E3%82%89%E8%
 使う場合はパウダー類の前。ファンデーションがパウダーならその前、リキッドなら後。
 https://depaco.daimaru-matsuzakaya.jp/articles/list/b221119b-a/
 
-化粧下地とファンデーションよりも薄めにメイクしたい時は BB クリームや CC クリームを選ぶことがある。
-BB クリームは薄く肌色を整えて、CC クリームは薄く肌色を変化させる。
-ファンデーションするほどではないなら、まずは BB クリームから入ってもいいかも。
+https://youtube.com/watch?v=poEz7kAN5Jo&si=E6eCohjXjZ6LlOzq
+
+ファンデーションにない機能を足したい時だけ下地を使う。紫外線カット、乾燥防止、テカリ防止、など。
+
+ファンデーションで肌色を均一にして、パウダーでつや消しする。
+
+パウダーファンデーションはスポンジが汚れやすいので、使い捨てのスポンジを使うのもいい。
