--- a/shared/people/appearance/outfit/装い.md
+++ b/shared/people/appearance/outfit/装い.md
@@ -22,3 +22,8 @@
 フォーマルやカジュアルに振り切った方がいい場合もある。
 
 特定の女子を狙うなら隣に立って似合う装いをする。
+
+黒は一番重い色で、下半身に使いやすい。ボトムスは黒を形や素材の違いでいくつか持っておくと簡単に味変したりトップスに合わせたりできる。
+
+服の中に要素が増えすぎると調和させるのが難しくなる。
+たとえば、半ズボン、肌、靴下、靴、よりは、長ズボン、靴、のほうが要素が少なくて合わせやすい。
