--- a/shared/people/appearance/シルエット.md
+++ b/shared/people/appearance/シルエット.md
@@ -8,6 +8,11 @@
 
 これらのパターンに当てはまらない中途半端なシルエットはださくなりがち。
 
+## Y
+
+下半身が細身でも、上半身のボリュームが足りないとYラインにもIラインにもならない。
+上半身のボリュームを足してYラインにするか、下半身のボリュームを足してIラインにするとバランスがいい。
+
 ## I
 
 タイトな服を着ても、体型がIラインでないならIラインにならない。
