--- a/shared/society/謝意.md
+++ b/shared/society/謝意.md
@@ -41,3 +41,5 @@
 
 相手が謝らないのは別にプライドとは全く関係ない。自分が勝手に傷ついたと思っているだけ。自分のせいなのに「プライドが高い」って相手にレッテルを貼って自分を守っている。
 誰かのことを「プライドが高い」とか「マウントしないで」とかいう人は基本的に他責の人。
+
+謝る行為は、害を与えないように気を遣っているように見えて安心しやすい。尊重しようとしている。
