--- a/shared/talk/small/スモールトーク.md
+++ b/shared/talk/small/スモールトーク.md
@@ -16,3 +16,24 @@
 本気で当てに行く
 
 https://youtu.be/fq3ENVVHLQE?si=J3P4G6FZnSsAF7Co
+
+一瞬で警戒を解く。
+天気とかはまぁ無難ではある。
+もっというと、「会えて嬉しい」とか「お忙しい中ありがとうございます」とか感謝を伝えるのが一番。
+
+相手も他の人に話したくなる話が面白い話。トークの面白さはそこかも。会話ではないけど。
+
+第一印象を良くするのはやっぱりトーク。会話の前に、トークで「この人と話してみたい」と思わせる。話してみたい人に、楽しそうに話を聞いてもらうのが気持ちいい。
+
+ビジネスの場合、経済新聞、経済雑誌、ビジネス書、セミナー、などで経済や経営の雑学を仕入れて、スモールトークに使う。
+ビジネス以外の場合、相手の興味の候補が広いので難しい。ビジネストークよりも雑談の方が当然難しい。ビジネスの話は経営者くらいにしか刺さらない。
+
+会話の前のスモールトークが大事。
+挨拶、
+感謝を伝える、
+軽い話題から入って深い話題に進める、
+相手が誰かに話したくなるネタを渡す、
+が基本。
+
+知識で誰かに話したくなるネタを渡すのは難しい。ビジネスの場ならともかく、雑談では相手の興味や関心を絞りきれない。かなり自分の興味ある分野くらい。
+代わりに、ユーモアのあるトークで自分自身や自分の体験、失敗談などをネタにできるようにするのが一番。「こないだ面白い人に会ったんだよ」って話したくなったら最高。
