--- a/shared/talk/topics/深い話題.md
+++ b/shared/talk/topics/深い話題.md
@@ -60,3 +60,23 @@ https://youtu.be/wNT0Oc63T8w?si=IXzFKBhpCgV63Spu
 
 相手に嫌われたくなくて深い話をしないのは間違っている。
 どっちにしても深い話をしないと嫌われる。
+
+深い話に移るには、相手の反応を見る。
+
+深い話を振ってみて相手の反応が悪かったら、一旦引くのもあり。「ごめん、話したくなかった？」とか、「ごめん、デリカシーがなかったね」とか言って謝る。
+
+話したくない場合の反応をよく知っておく。
+
+言い淀む、言葉を濁す
+ボディランゲージ
+目を逸らす
+話を逸らす
+話をあえて広げようとしない
+こちらが深い話を自己開示しても表面的に反応する
+
+嫌そうな顔をするとか、わかりやすい反応だけではない。
+
+自己開示の度合い（公私）
+感情の露出度
+社会的な受容性
+話題の抽象度
