--- a/shared/technique/スキル.md
+++ b/shared/technique/スキル.md
@@ -5,3 +5,6 @@
 上手いか下手かはそもそもそのスキルについて知らないと判別できない。会話のスキルがない人は相手が会話上手か下手かもわからない。
 
 スキルについて知識があっても実践できるかどうかは別。緊張や動揺で実践できなくなることもある。
+
+対人スキルは単なるスキルなのに専門スキルと違って教えることができないと判断するのはおかしい。
+会社では専門スキルの教育プログラムはあるけど対人スキルのは用意してない、というだけ。対人スキルのも用意すれば専門スキルが高いだけでも採用できる。
