--- a/shared/trust/intimacy/tips/親近感を与える.md
+++ b/shared/trust/intimacy/tips/親近感を与える.md
@@ -9,6 +9,9 @@
 - 人前で失敗する
 - 失敗を笑い話にする
 - 話が合う
+- 笑顔
+- 自分から気を遣う
+- 相手に興味や関心を示す
 
 失敗でなくて、制御された「おかしさ」でもいい。ユーモア。
 
@@ -17,3 +20,7 @@
 共通点を見つけた上で「これだけ共通点があったら他にもあるかもね」みたいに共通点を強調するのもいい。
 
 共通点はとにかく細かすぎるところまで深掘りして、何度も話題に出す。会話を続けるきっかけにもなるので二重に信頼されやすくなる。
+
+親しみやすく振る舞うにはどうするか。
+
+笑顔、自分から気を遣う、相手に関心や興味を持つ、とか。
