--- a/shared/talk/話題のカテゴリ.md
+++ b/shared/talk/話題のカテゴリ.md
@@ -8,7 +8,6 @@
 
 - 近況
 - 過去
-  - 成功
   - 失敗
 - 将来
   - 夢
@@ -22,7 +21,8 @@
   - 出身地
   - 誕生日
 - 趣味や娯楽
-- 仕事や作業
+  - 余暇の過ごし方
+- 仕事
 - 旅行や帰省
 - 健康
   - 病気や怪我
@@ -30,15 +30,22 @@
 - 財産
 - 生活
   - 衣食住
+    - 家
     - 店
 
 ## 身近な人
 
 - 家族や友人
 - 上司や同僚
+
+## 恋愛
+
 - 恋愛
   - 理想
   - 経験
+- 結婚
+  - 恋人
+  - 子供
 
 ## 社会
 
@@ -54,13 +61,12 @@
   - ゲームやスポーツ
 - 芸術
 - 文化
-  - 流行
+  - 流行・ファッション
   - 伝統
 - 政治
 - 宗教
 - 経済
   - ビジネスや商売
-- 歴史
 
 ## 自然
 
@@ -74,8 +80,10 @@
 - 学問
   - 哲学・神学
   - 科学
-- 科学技術
+- 歴史
+- テクノロジー
 - 専門知識
   - 業務
   - マネジメント
   - コミュニケーション
+  - エンジニアリング
